--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
-Package: emrclimputacionesespejo
+Package: emrclimputacionespejo
 Type: Package
 Title: Imputación IR base 2023 
-Version: 0.1.0.9000
+Version: 0.1.1.9000
 Author: person("Renzo", "Peragallo", , "renzo.peragallo@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Maintainer: Renzo Peragallo Díaz <riperagallod@ine.gob.cl>
