Se corrige para que impute por arrastre cuando no existe otra desagregación.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(excluir_comportamiento_unico)
 export(imputar_hent)
 export(imputar_mes)
 export(imputar_mes_arrastre)
+export(imputar_parametros_arrastre)
 export(imputar_parametros_segun_nivel_representatividad)
 export(imputar_rehe)
 export(imputar_variables)
